--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
 
     <dimen name="gallery_top_spec_line">64dp</dimen>
     <dimen name="gallery_page_padding_bottom">56dp</dimen>
+    <dimen name="gallery_item_padding_vertical">8dp</dimen>
+
 </resources>
