--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
                     android:layout_marginBottom="@dimen/gallery_page_padding_bottom"
                     android:layout_marginHorizontal="@dimen/margin_large"
                     android:text="@string/picker_image_empty"
-                    app:goneUnless="@{viewModel.isEmpty &amp;&amp; !viewModel.isLoading}"
+                    app:goneUnless="@{viewModel.isEmpty}"
                     tools:visibility="visible" />
 
             </FrameLayout>
