--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,9 +53,7 @@
                     android:clipToPadding="false"
                     android:orientation="vertical"
                     android:paddingBottom="@dimen/gallery_page_padding_bottom"
-                    android:paddingTop="@dimen/spacing_normal"
-                    android:scrollbars="vertical"
-                    app:layoutManager="LinearLayoutManager" />
+                    android:scrollbars="vertical" />
 
                 <TextView
                     android:id="@+id/empty"
