--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -41,26 +41,39 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/margin_small" />
+            app:layout_constraintGuide_begin="0dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
-            app:layout_constraintGuide_end="@dimen/margin_small" />
+            app:layout_constraintGuide_end="0dp" />
 
-        <TextView
+        <ImageView
             android:id="@+id/image"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="@{image.data}"
+            android:layout_height="0dp"
+            app:glideImage="@{image.data}"
             android:textAlignment="viewStart"
             android:textAppearance="?textAppearanceListItem"
+            app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintStart_toEndOf="@id/guideline_start"
+            app:layout_constraintEnd_toStartOf="@id/guideline_end"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
-            tools:text="image path" />
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/thumbnail_boarder"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintStart_toEndOf="@id/guideline_start"
+            app:layout_constraintEnd_toStartOf="@id/guideline_end"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
