--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <!-- 리스트 빈 화면 나올 때 -->
     <style name="Widget.PagingPicker.EmptyResults">
         <item name="android:drawablePadding">@dimen/margin_normal</item>
-        <item name="android:drawableTop">@drawable/ic_logo_assistant</item>
+        <item name="android:drawableTop">@drawable/ic_empty_mark</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textAppearance">?android:textAppearanceMedium</item>
     </style>
