--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,5 +10,7 @@
     <dimen name="gallery_top_spec_line">64dp</dimen>
     <dimen name="gallery_page_padding_bottom">56dp</dimen>
     <dimen name="gallery_item_padding_vertical">0dp</dimen>
+    
+    <dimen name="upper_function_height">84dp</dimen>
 
 </resources>
