--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,10 +9,18 @@
         android:id="@+id/galleryFragment"
         android:name="com.bro.pagingpicker.gallery.GalleryFragment"
         android:label="fragment_gallery"
-        tools:layout="@layout/fragment_gallery" >
+        tools:layout="@layout/fragment_gallery">
         <action
             android:id="@+id/to_image_viewer"
             app:destination="@id/imageViewerFragment">
+            <argument
+                android:name="resource"
+                android:defaultValue="false"
+                app:argType="boolean" />
+        </action>
+        <action
+            android:id="@+id/to_video_viewer"
+            app:destination="@id/videoViewerFragment">
             <argument
                 android:name="resource"
                 android:defaultValue="false"
@@ -24,5 +32,10 @@
         android:id="@+id/imageViewerFragment"
         android:name="com.bro.pagingpicker.viewer.ImageViewerFragment"
         android:label="ImageViewerFragment" />
+
+    <fragment
+        android:id="@+id/videoViewerFragment"
+        android:name="com.bro.pagingpicker.viewer.VideoViewerFragment"
+        android:label="VideoViewerFragment" />
 
 </navigation>
