--- a/app/src/main/res/layout/fragment_video_viewer.xml
+++ b/app/src/main/res/layout/fragment_video_viewer.xml
@@ -15,21 +15,24 @@
             name="viewModel"
             type="com.bro.pagingpicker.gallery.GalleryViewModel" />
             -->
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
-            android:id="@+id/image_viewer_view"
+        <ImageView
+            android:id="@+id/video_viewer_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scaleType="centerInside"
             android:transitionName="@{uri}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
