--- a/app/src/main/res/layout/fragment_video_viewer.xml
+++ b/app/src/main/res/layout/fragment_video_viewer.xml
@@ -7,8 +7,8 @@
     <data>
 
         <variable
-            name="uri"
-            type="String" />
+            name="video"
+            type="com.bro.pagingpicker.model.gallery.Video" />
 
         <!--
         <variable
@@ -22,12 +22,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!--
+            android:transitionName="@{uri}"
+        -->
         <ImageView
             android:id="@+id/video_viewer_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerInside"
-            android:transitionName="@{uri}"
+            app:glideImage="@{video.filePath}"
+            app:centerInside="@{true}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
