--- a/app/src/main/res/layout/item_gallery_video.xml
+++ b/app/src/main/res/layout/item_gallery_video.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2018 Google LLC
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,8 +15,8 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -30,16 +29,16 @@
         <variable
             name="eventListener"
             type="com.bro.pagingpicker.gallery.GalleryEventListener" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
-        android:paddingBottom="@dimen/gallery_item_padding_vertical"
-        android:paddingTop="@dimen/gallery_item_padding_vertical"
         android:onClick="@{view -> eventListener.onClickGalleryItem(view, item)}"
-        >
+        android:paddingTop="@dimen/gallery_item_padding_vertical"
+        android:paddingBottom="@dimen/gallery_item_padding_vertical">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_start"
@@ -59,16 +58,16 @@
             android:id="@+id/preview_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:glideImage="@{item.filePath}"
             android:textAlignment="viewStart"
             android:textAppearance="?textAppearanceListItem"
             android:transitionName="@{item.filePath}"
+            app:glideImage="@{item.filePath}"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintTop_toBottomOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:background="@color/colorPrimary"/>
 
         <View
             android:layout_width="0dp"
@@ -76,10 +75,25 @@
             android:background="@drawable/thumbnail_boarder"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toEndOf="@id/guideline_start"
             app:layout_constraintEnd_toStartOf="@id/guideline_end"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/guideline_start"
+            app:layout_constraintTop_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:formatSeconds="@{item.duration}"
+            app:pattern="@{`hh:mm:ss`}"
+            android:textColor="@color/white"
+            android:textSize="@dimen/gallery_video_item_duration_text"
+            android:textStyle="bold"
+            android:layout_marginEnd="@dimen/margin_small"
+            android:layout_marginBottom="@dimen/margin_small"
+            app:layout_constraintBottom_toBottomOf="@id/preview_image"
+            app:layout_constraintEnd_toEndOf="@id/preview_image"
+            tools:text="10:30:17"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
