--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,9 @@
     <dimen name="gallery_top_spec_line">64dp</dimen>
     <dimen name="gallery_page_padding_bottom">56dp</dimen>
     <dimen name="gallery_item_padding_vertical">0dp</dimen>
+
+    <dimen name="gallery_video_item_play_icon">64dp</dimen>
+    <dimen name="gallery_video_item_duration_text">11dp</dimen>
     
     <dimen name="upper_function_height">84dp</dimen>
 
